--- a/Practice python 1.ipynb
+++ b/Practice python 1.ipynb
@@ -9,12 +9,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello world\n"
+      "hello world2\n"
      ]
     }
    ],
    "source": [
-    "print (\"hello world\")"
+    "print (\"hello world2\")"
    ]
   }
  ],
